Añadido taller de cálculo del perímetro y área de un círculo.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,6 +33,7 @@ book:
     site: "@aprendeconalf"
   chapters:
     - index.qmd
+    - area-circulo.qmd
     - copo-nieve.qmd
     - sumas-riemann-1.qmd
     - teorema-fundamental-calculo.qmd
